--- a/O2Kml.csproj
+++ b/O2Kml.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -23,5 +23,10 @@
       <PackagePath>\</PackagePath>
     </None>
   </ItemGroup>
+
+  <PropertyGroup>
+    <DefaultItemExcludes>$(DefaultItemExcludes);UnitTests\**</DefaultItemExcludes>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
 
 </Project>
