--- a/O2Kml.csproj
+++ b/O2Kml.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Version>0.1.3</Version>
+    <Version>0.1.4</Version>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>O2Kml</Title>
-    <Company>Dani Lodholm</Company>
+    <Company>Robin Lodholm</Company>
     <Description>Generic XMLSerializer-based serialization of KML files.</Description>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <RepositoryUrl>https://github.com/orbitusii/O2Kml</RepositoryUrl>
